# middleware/auth.js
@@ -1,0 +1,8 @@
+const ensureAuthenticated = (req, res, next) => {
+    if (req.isAuthenticated()) {
+        return next();
+    }
+    res.status(401).json({ message: 'Unauthorized' });
+};
+
+module.exports = { ensureAuthenticated };
