# routes/task.js
@@ -3,9 +3,10 @@ const router = express.Router();
 const taskController = require('../controllers/task');
 const { validateTask, validateDateRange, validateStatusArray, validatePriorityArray } = require('../middleware/validation');
 const asyncWrapper = require('../helpers/asyncWrapper');
+const { ensureAuthenticated } = require('../middleware/auth');
 
 router.get('/recent', asyncWrapper(taskController.getRecentTasks));
-router.post('/date-range', validateDateRange, asyncWrapper(taskController.getTasksByDateRange));
+router.post('/date-range', ensureAuthenticated,validateDateRange, asyncWrapper(taskController.getTasksByDateRange));
 router.get('/status/:status', asyncWrapper(taskController.getTasksByStatus));
 router.get('/priority/:priority', asyncWrapper(taskController.getTasksByPriority));
 router.get('/user/:email', asyncWrapper(taskController.getTasksByUser));
@@ -14,15 +15,15 @@ router.get('/search', asyncWrapper(taskController.searchTasks));
 
 router.get('/', asyncWrapper(taskController.getAllTasks));
 router.get('/:id', asyncWrapper(taskController.getTaskById));
-router.post('/', validateTask, asyncWrapper(taskController.createTask));
-router.put('/:id', validateTask, asyncWrapper(taskController.updateTask));
-router.delete('/:id', asyncWrapper(taskController.deleteTask));
+router.post('/', ensureAuthenticated,validateTask, asyncWrapper(taskController.createTask));
+router.put('/:id', ensureAuthenticated, validateTask, asyncWrapper(taskController.updateTask));
+router.delete('/:id', ensureAuthenticated, asyncWrapper(taskController.deleteTask));
 
 router.get('/user/:email', asyncWrapper(taskController.getTasksByUser));
 router.get('/user/:email/stats', asyncWrapper(taskController.getUserTasksCount));
 
-router.post('/status/multiple', validateStatusArray, asyncWrapper(taskController.getTasksByStatuses));
-router.post('/priority/multiple', validatePriorityArray, asyncWrapper(taskController.getTasksByPriorities));
+router.post('/status/multiple', ensureAuthenticated, validateStatusArray, asyncWrapper(taskController.getTasksByStatuses));
+router.post('/priority/multiple', ensureAuthenticated, validatePriorityArray, asyncWrapper(taskController.getTasksByPriorities));
 
 router.get('/due/:date', asyncWrapper(taskController.getTasksDueBy));
 
