# swagger-output.json
@@ -506,10 +506,5 @@
         }
       }
     }
-  },
-  "security": [
-    {
-      "OAuth2": []
-    }
-  ]
+  }
 }
